public/sass/partials/_seer.scss
#seer {
  #signaling-state {
    text-align: center;
  }

  #online-users-container {
    display: flex;
    color: palette(text);
    flex-flow: column nowrap;
    align-items: center;
    padding: 8px;
    transition: color ease-in-out 0.1s;

    &:hover {
      cursor: pointer;
      color: palette(text-light);
    }

    #online-users {
      color: palette(text);
      max-height: 0;
      overflow: hidden;
      transition: max-height 0.2s ease-out;
    }
  }

  .flow.list {
    display: flex;
    margin: 8px 0;
    flex-flow: row wrap;
  }

  .flow.list > .list-item {
    padding: 2px 4px;
    border: solid 2px black;
    border-radius: 4px;
    margin-right: 4px;
  }

  #session-controls {
    display: flex;
    justify-content: center;
    padding: 8px;

    .btn {
      margin: 0.2em 0.4em;
    }
  }

  #student-container {
    display: flex;
    max-width: 100%;
    flex-flow: row wrap;
    justify-content: center;

    .student {
      @extend .card;
      display: flex;
      max-width: 100%;
      flex-flow: column nowrap;

      .student-info {
        text-align: center;
      }

      .talk {
        margin: 0.3em;
      }

      .video-container {
        display: flex;
        max-width: 49vw;
        flex-flow: row wrap;
        justify-content: space-around;

        .video-wrapper {
          position: relative;
          min-width: 32px;
          min-height: 32px;

          .minimise-button {
            background-color: none;
            position: absolute;
            top: 8px;
            right: 8px;
            color: palette(theme);

            &:hover {
              cursor: pointer;
              color: palette(alert);
            }
          }

          video {
            width: calc(24vw - 1em);
            height: calc((24vw - 1em) * 9/16);
            margin: 0.3em;
          }
        }
      }
    }

    .student.highlight {
      box-shadow: 0 0 8px 4px palette(alert);
      cursor: pointer;
    }
  }
}

